Allows the game to end at zero life and restart

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <div class="card white darken-1">
                         <div class="card-content black-text">
                             <ul id="tabs-swipe-demo" class="tabs">
-                                <li class="tab col m12"><a class="active" href="#test-swipe-1">Game</a></li>
-                                <li class="tab col m12"><a class="active" href="#test-swipe-2">Statistics</a></li>
+                                <li class="tab col m6"><a class="active" href="#test-swipe-1">Game</a></li>
+                                <li class="tab col m6"><a class="active" href="#test-swipe-2">Statistics</a></li>
                             </ul>
                             <div id="test-swipe-1">
                                 <h3 class="center-align">Game</h3>
@@ -55,90 +55,90 @@
                                     <div id="letter-container">
                                         <div class="row">
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-A" onclick="HangMan.selectLetter('A');">A</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-A" onclick="HangMan.selectLetter('A');">A</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-B" onclick="HangMan.selectLetter('B');">B</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-B" onclick="HangMan.selectLetter('B');">B</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-C" onclick="HangMan.selectLetter('C');">C</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-C" onclick="HangMan.selectLetter('C');">C</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-D" onclick="HangMan.selectLetter('D');">D</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-D" onclick="HangMan.selectLetter('D');">D</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-E" onclick="HangMan.selectLetter('E');">E</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-E" onclick="HangMan.selectLetter('E');">E</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-F" onclick="HangMan.selectLetter('F');">F</button>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-G" onclick="HangMan.selectLetter('G');">G</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-H" onclick="HangMan.selectLetter('H');">H</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-I" onclick="HangMan.selectLetter('I');">I</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-J" onclick="HangMan.selectLetter('J');">J</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-K" onclick="HangMan.selectLetter('K');">K</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-L" onclick="HangMan.selectLetter('L');">L</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-F" onclick="HangMan.selectLetter('F');">F</button>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-M" onclick="HangMan.selectLetter('M');">M</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-G" onclick="HangMan.selectLetter('G');">G</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-N" onclick="HangMan.selectLetter('N');">N</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-H" onclick="HangMan.selectLetter('H');">H</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-O" onclick="HangMan.selectLetter('O');">O</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-I" onclick="HangMan.selectLetter('I');">I</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-P" onclick="HangMan.selectLetter('P');">P</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-J" onclick="HangMan.selectLetter('J');">J</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-Q" onclick="HangMan.selectLetter('Q');">Q</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-K" onclick="HangMan.selectLetter('K');">K</button>
                                             </div>
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-R" onclick="HangMan.selectLetter('R');">R</button>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-S" onclick="HangMan.selectLetter('S');">S</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-T" onclick="HangMan.selectLetter('T');">T</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-U" onclick="HangMan.selectLetter('U');">U</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-V" onclick="HangMan.selectLetter('V');">V</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-W" onclick="HangMan.selectLetter('W');">W</button>
-                                            </div>
-                                            <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-X" onclick="HangMan.selectLetter('X');">X</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-L" onclick="HangMan.selectLetter('L');">L</button>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="input-field col s2">
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-Y" onclick="HangMan.selectLetter('Y');">Y</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-M" onclick="HangMan.selectLetter('M');">M</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-N" onclick="HangMan.selectLetter('N');">N</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-O" onclick="HangMan.selectLetter('O');">O</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-P" onclick="HangMan.selectLetter('P');">P</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-Q" onclick="HangMan.selectLetter('Q');">Q</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-R" onclick="HangMan.selectLetter('R');">R</button>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-S" onclick="HangMan.selectLetter('S');">S</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-T" onclick="HangMan.selectLetter('T');">T</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-U" onclick="HangMan.selectLetter('U');">U</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-V" onclick="HangMan.selectLetter('V');">V</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-W" onclick="HangMan.selectLetter('W');">W</button>
+                                            </div>
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-X" onclick="HangMan.selectLetter('X');">X</button>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="input-field col s2">
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-Y" onclick="HangMan.selectLetter('Y');">Y</button>
                                             </div>
                                             <div class="input-field col s2">                                              
-                                                <button class="waves-effect waves-light btn" id="clickable-letter-Z" onclick="HangMan.selectLetter('Z');">Z</button>
+                                                <button class="waves-effect waves-light btn-large" style="width: 128px;" id="clickable-letter-Z" onclick="HangMan.selectLetter('Z');">Z</button>
                                             </div>
                                         </div>
                                         <p>
