Draw a hangman on the screen using canvas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./assets/materialize/js/materialize.min.js"></script>
 
+        <script src="./assets/js/Canvas.js"></script>
         <script src="./assets/js/HangMan.js"></script>
         <script src="./assets/js/KeyBinds.js"></script>
     </head>
@@ -53,6 +54,7 @@
                                     <blockquote>
                                         <p>
                                             <div id="chances-container"></div>
+                                            <canvas id="stickman">Browser does not support HTML5 Canvas</canvas>
                                         </p>
                                         <p>
                                             <div id="hangman-word-container"></div>
